# wincrop

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml
scripts/: update-version.py
src/: lib.rs  main.rs
