[package]
name = "wincrop"
version = "0.0.9"
edition = "2024"
description = "A Windows-only screen capture and crop crate."

[dependencies]
anyhow = "1.0"
image = "0.25"
minifb = "0.28"
xcap = "0.9"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_HiDpi",
] }
